# lishp

./: .editorconfig  .gitignore  Cargo.toml  README.md  check.sh  std.lsp
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: lib.rs  repl.rs
cli/src/repl/: eval.rs  helper.rs  input.rs  mod.rs  session.rs
examples/: acc-class.lsp  expand_macro_demo.lishp  knight.lsp  test_factorial.lsp  test_simple.lsp
lishp/: Cargo.toml
lishp/benches/: eval_bench.rs  parser_bench.rs
lishp/src/: eval.rs  expand.rs  io.rs  lib.rs  parser.rs  value.rs
lishp/tests/: macro_integration_test.rs
