[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lishp"
path = "bin/cli.rs"

[dependencies]
lishp = { path = "../lishp" }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
rustyline = "17.0.1"
