[package]
name = "lishp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ecow = "0.2.6"
nom = "8.0.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false
